After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687838 - Fix some compiler warnings
Fix some compiler warnings
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-07 12:19 UTC by Colin Walters
Modified: 2012-11-07 12:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix some compiler warnings (3.02 KB, patch)
2012-11-07 12:19 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2012-11-07 12:19:43 UTC
A few from new gnome-common, others preexisting.
Comment 1 Colin Walters 2012-11-07 12:19:45 UTC
Created attachment 228357 [details] [review]
Fix some compiler warnings
Comment 2 Colin Walters 2012-11-07 12:23:16 UTC
Reviewed by mclasen on IRC.

Attachment 228357 [details] pushed as 0f86191 - Fix some compiler warnings