Fix some compiler warnings

A few from new gnome-common, others preexisting.

https://bugzilla.gnome.org/show_bug.cgi?id=687838